fix: org user detail & tooltip overflow style

--- a/frontend/packages/web/src/assets/style/naive-reset.less
+++ b/frontend/packages/web/src/assets/style/naive-reset.less
@@ -146,8 +146,10 @@
 
 // tooltip 最大限制
 .n-tooltip {
+  overflow-y: scroll;
   max-width: 300px;
   max-height: 400px;
+  .crm-scroll-bar();
 }
 
 // 表格
